[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/player/sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://characters/player/player.gd" type="Script" id=2]
[ext_resource path="res://characters/player/sprites/Player_Move_2.png" type="Texture" id=3]
[ext_resource path="res://characters/player/sprites/Player_Move.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "SETUP"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 6.27667, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.3664, 27.2888 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 27.7484, 6.48501 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )
magnitudeExplosion = 8.0
lifetimeExplosion = 0.2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -26, 26, 19, -26, 19 )

[node name="Cooldown" type="Timer" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]
anims/SETUP = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/move = SubResource( 3 )

[node name="BusterRight" type="Position2D" parent="."]
position = Vector2( 16, -2 )

[node name="BusterLeft" type="Position2D" parent="."]
position = Vector2( -16, -2 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.142395, 13.5857 )
shape = SubResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
[connection signal="area_entered" from="HitBox" to="." method="_on_hitbox_entered"]
